fix: chatBubble z-index

--- a/src/app/components/chat-bubble/chat-bubble.component.css
+++ b/src/app/components/chat-bubble/chat-bubble.component.css
@@ -11,6 +11,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 9999;
 }
 
 .chat-bubble-wrapper:hover{
@@ -18,6 +19,7 @@
   height: auto;
   min-height: 300px;
   border-radius: 10%;
+  z-index: 9999;
 }
 
 .chat-bubble-content {
